maj imports et regex

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,11 +1,12 @@
 NotEmpty=Le champ est requis.
 Size.userForm.username=Le pseudonyme doit contenir entre 6 et 32 caracteres.
 Duplicate.userForm.username=Ce pseudonyme n'est pas disponible.
+Invalid.userForm.username=Le format de caractere du pseudonyme n'est pas valide.
 Size.userForm.password=Le mot de passe doit contenir au moins 8 caracteres.
 Invalid.userForm.password=Le mot de passe n'est pas valide.
 Diff.userForm.passwordConfirm=Les mots de passe ne correspondent pas.
 Invalid.userForm.nom=Le format de caractere du nom n'est pas valide.
-Invalid.userForm.prenom=Le format de caractere du prénom n'est pas valide.
+Invalid.userForm.prenom=Le format de caractere du prenom n'est pas valide.
 Invalid.userForm.service=Le format de caractere du service n'est pas valide.
 Invalid.userForm.email=Le format de caractere de l'email n'est pas valide.
-Invalid.userForm.telephone=Le format de caractere du téléphone n'est pas valide.
+Invalid.userForm.telephone=Le format de caractere du telephone n'est pas valide.
