Validator sur l'email

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,6 +1,7 @@
 NotEmpty=Le champ est requis.
 Size.userForm.username=Le pseudonyme doit contenir entre 6 et 32 caracteres.
 Duplicate.userForm.username=Ce pseudonyme n'est pas disponible.
+Duplicate.userForm.email=Cet email n'est pas disponible.
 Invalid.userForm.username=Le format de caractere du pseudonyme n'est pas valide.
 Size.userForm.password=Le mot de passe doit contenir au moins 8 caracteres.
 Invalid.userForm.password=Le mot de passe n'est pas valide.
